trying to fix crash from iframe bug on ios + bg image on ios

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -24,13 +24,19 @@ body {
   font-style: normal;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .home {
     background: url(../assets/background-blue-smartphone.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-position: center;
+  }
+} */
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
+  body {
+      background-image: url(../assets/background-blue-smartphone.jpg);
   }
 }
 
@@ -340,7 +346,7 @@ color: rgb(0,9,128);
   padding-right: 100px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .container-4 {
     padding-left: 20px;
     padding-right: 20px;
